--- a/client/Views/App/Reward/reward.html
+++ b/client/Views/App/Reward/reward.html
@@ -1,4 +1,4 @@
-<template name="reward">
+<template name="reward123rjkrdjkrf">
     <!--Start container -->
     <div class="container" style="padding-top:30px;">
         <div class="row">
