--- a/client/Views/App/profile/page_profile.html
+++ b/client/Views/App/profile/page_profile.html
@@ -1,4 +1,4 @@
-<template name="profile">
+<template name="profile123">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
