fix login style

--- a/client/Views/App/login/email.html
+++ b/client/Views/App/login/email.html
@@ -4,7 +4,7 @@
 		<form role="form">
 			<div class="form-group" style="margin-bottom:20px;" id="email">
 				<label>Enter your email</label>
-				<input class="form-control" type="email" name="email" required>
+				<input class="form-control" type="text" name="email" required>
 			</div>
 			
 			<div class="form-group" style="margin-bottom:20px;">
