--- a/client/Views/App/login/forgetpassword.html
+++ b/client/Views/App/login/forgetpassword.html
@@ -7,12 +7,16 @@
                 <input class="form-control" type="text" name="code" required>
             </div>
             <div class="form-group " style="margin-bottom:20px;" id="code">
+                <label>{{_ "Recovery Email"}}</label>
+                <input class="form-control" type="text" name="emailRecovery" required>
+            </div>
+            <!-- <div class="form-group " style="margin-bottom:20px;" id="code">
                     <label>{{_ "Recovery Email"}}</label>
                     <input class="form-control" type="email" name="emailRecovery" required>
-            </div>
+            </div> -->
             <div class="form-group" style="margin-bottom:20px;">
                         
-                <a href="/ResetPassword"><input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="Send"></a>
+                <input type="submit" class="btn btn-primary" style="padding:0px 15px; border-radius:3px; margin:0px;" value="Send">
             </div>
                     
         </form>
