--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -249,35 +249,6 @@
                 </ul>
 
             </li> <!-- #submenu-1 -->
-
-            <!--<li class="icon blog">
-                <a href="blog.html">
-                    <span class="menu-li-title">FeedBack</span>
-                    <img class="menu-li-arrow" src="img/icons/arrow-forward.png" alt="" />
-                </a>
-            </li>
-
-            <li class="icon book">
-                <a href="typography.html">
-                    <span class="menu-li-title">Pokoet</span>
-                    <img class="menu-li-arrow" src="img/icons/arrow-forward.png" alt="" />
-                </a>
-            </li>
-
-            <li class="icon mail">
-                <a href="contact.php">
-                    <span class="menu-li-title">Contact</span>
-                    <img class="menu-li-arrow" src="img/icons/arrow-forward.png" alt="" />
-                </a>
-            </li>
-
-            <li class="icon star">
-                <a href="#">
-                    <span class="menu-li-title">Like</span>
-                    <img class="menu-li-arrow" src="img/icons/arrow-forward.png" alt="" />
-                </a>
-            </li>-->
-
             <li class="icon info">
                 <a href="aboutus.html">
                     <span class="menu-li-title">Gift</span>
@@ -370,6 +341,175 @@
         </div>
     </section> <!-- #sidebar-wrapper -->
     <script type="text/javascript">
+    	$(function(){
+		    $('#sl2').slider();     
+		});
+    </script>
+</template>
+<template name="headerMo">				
+	<section id="menu-wrapper">
+		<div id="menu-search">
+			<input id="menu-search-input-text" type="text" placeholder="Search..." />
+		</div>
+		<ul id="menu-lateral" class="menu">
+			<li>
+                <a href="/">
+                    <span class="menu-li-title">Market</span>
+                </a>
+            </li>
+			<li id="a-submenu-1" class="icon plus">
+                <a href="#">
+                    <span class="menu-li-title">My profile</span>
+                </a>
+                <ul style="display: none;" id="submenu-1">
+                    <li>
+                        <a href="/profile">
+                            <span class="menu-li-title">My safir profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/profile1">
+                            <span class="menu-li-title">Member profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/reward">
+                            <span class="menu-li-title">Rewards & points</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="menu-li-title">Like</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+			<li class="icon box">
+				<a href="/login">
+					<span class="menu-li-title">Sing in / Register</span>
+				</a>
+			</li>
+			<li id="a-submenu-1" class="icon plus">
+				<a href="/bestSelling">
+					<span class="menu-li-title">Link selling</span>
+				</a>
+			</li> <!-- #submenu-1 -->
+			<li class="icon info">
+				<a href="aboutus.html">
+					<span class="menu-li-title">Gift</span>
+				</a>
+			</li>
+			<li class="icon info">
+				<a href="aboutus.html">
+					<span class="menu-li-title">Feedback</span>
+				</a>
+			</li>
+		</ul> <!-- .menu -->
+		<hr/>
+		<ul>
+			<li class="icon info">
+				<a href="">
+					<span class="menu-li-title">WEBZINE</span>
+				</a>
+			</li>
+			<li class="icon info">
+				<a href="/tuto">
+					<span class="menu-li-title">TUTO</span>
+				</a>
+			</li>
+			<li class="icon info">
+				<a href="/look">
+					<span class="menu-li-title">LOOKS</span>
+				</a>
+			</li>
+			<li class="icon info">
+				<a href="">
+					<span class="menu-li-title">FORUM</span>
+				</a>
+			</li>
+		</ul>
+    </section> <!-- #menu-wrapper -->
+	<section id="sidebar-wrapper">
+		<div class="widget">
+			<ul>
+				<li class="item">
+					<a href="#" id="price_range">Price Range</a>
+				</li>
+				<!--panel price range -->
+				<div class="panel_price_range">
+					<div class="row">
+						<span class="pull-left">0 $</span><span class="pull-right">+1000 $</span>
+					</div>
+					<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="1000" data-slider-step="5" data-slider-value="[0,1000]" id="sl2" >
+				</div>
+				<li class="item"><a href="#" id="brands">Brands</a></li>
+				<!-- panel brands -->
+					<div class="panel_brands">
+						<div class="row">
+							<div class="col-xs-4"><h1><a href="">A</a></h1></div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+						</div>
+						<br/>
+						<div class="row">
+							<div class="col-xs-4"><h1><a href="">B</a></h1></div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+						</div>
+						<br/>
+						<div class="row">
+							<div class="col-xs-4"><h1><a href="">C</a></h1></div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+							<div class="col-xs-4">
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+								<h4>Brand</h4>
+							</div>
+						</div>
+					</div>
+				<li class="item"><a href="#" id="advanced">Advanced</a></li>
+				<!--panel advanced-->
+				<div class="panel_advanced">
+					<ul>
+						<li><a href="">Ingredient Preference</a></li>
+						<li><a href="">Concern</a></li>
+						<li><a href="#" id="skin_type">Skin Type</a></li>
+						<div class="panel_skin_type">
+							<div class="col-xs-6">
+								<p>Brand</p>
+								<p>Brand</p>
+								<p>Brand</p>
+							</div>
+							<div class="col-xs-6">
+								<p>Brand</p>
+								<p>Brand</p>
+								<p>Brand</p>
+							</div>
+						</div>
+						<li><a href="#" id="skin_type">Season</a></li>
+					</ul>
+				</div>
+			</ul>
+		</div>
+   	</section> <!-- #sidebar-wrapper -->
+	<script type="text/javascript">
     	$(function(){
 		    $('#sl2').slider();     
 		});
