--- a/public/css/price_range_custom.css
+++ b/public/css/price_range_custom.css
@@ -65,11 +65,12 @@
 
 /* panel brands */
 
-.panel_brands{
+.panel_brands {
     display: none;
-    overflow: hidden;
-    padding: 15px;      
-    background: #333333;   
+    overflow: scroll;
+    padding: 15px;
+    background: #333333;
+    height: 250px;
 }
 
 /* panel advanced */
