--- a/client/Views/App/Member-shipcard/Page_profile_black-women.html
+++ b/client/Views/App/Member-shipcard/Page_profile_black-women.html
@@ -1,4 +1,4 @@
-<template name="blackwomen">		
+<template name="blackwomen11">		
 	<div class="container">
 	<a href="/profile">
 		<div class="col-xs-12 col-sm-4 col-lg-4"><img class="img-responsive" src="images/pro_my_nothover.png"/></div>
