--- a/client/Views/App/Member-shipcard/Page_profile_gold-women.html
+++ b/client/Views/App/Member-shipcard/Page_profile_gold-women.html
@@ -1,4 +1,4 @@
-<template name="goldwomen">
+<template name="goldwomen11">
 	<div id="bg_goldwo">
 		<div class="container" >
 				<a href="/profile">
