--- a/client/Views/App/Member-shipcard/Page_profile_silver-women.html
+++ b/client/Views/App/Member-shipcard/Page_profile_silver-women.html
@@ -1,4 +1,4 @@
-<template name="silverwomen">
+<template name="silverwomen11">
 	<div id="bg_silwo">
 		<div class="container" >
 			<a href="/profile">
