--- a/client/Views/App/Member-shipcard/Page_profile_black.html
+++ b/client/Views/App/Member-shipcard/Page_profile_black.html
@@ -1,4 +1,4 @@
-<template name="blackmen">
+<template name="blackmen11">
 		<div class="container" id="bg_profull">
 			<a href="/profile">
 				<div class="col-xs-12 col-sm-4 col-lg-4">
