--- a/client/Views/App/Member-shipcard/Page_profile_silver.html
+++ b/client/Views/App/Member-shipcard/Page_profile_silver.html
@@ -1,4 +1,4 @@
-<template name="silvermen">
+<template name="silvermen11">
 		<div class="container" id="bg_pro_silver">
 			<a href="/profile">
 				<div class="col-xs-6 col-sm-4 col-lg-4"><img class="img-responsive" src="images/pro_my_nothover.png"/></div>
