--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -1,77 +1,170 @@
 <template name="tutodetails">
-	<!-- Start contain -->
-	<section class="shadow_bottom" >
-		{{#with getTutodetails _id}}
-		<div class="container" id="space_cont_top"  >		
-			<div class="clearfix"></div>
-			<div class="space_cont_top">
-				<div class="col-md-12">
-				</div>
-				<div class="col-md-7">
-					<h1 class="txt-color" >{{title}}</h1><br>
-					<!-- <p>{{url}}</p> -->
-					<video width="490" height="370" id="mainVideo" controls>
-						<source src="/videos/{{url}}" type="video/mp4">
-							
-						</video>
-						<div class="share-control" style="padding-top:10px; padding-bottom:50px">
-							<div class="col-md-4"> 
+	<article>
+        <section>
+        	<div class="wrapper">
+                <div class="row">
+                {{#with getTutodetails _id}}
+					<div class="col-xs-12">
+						<div class="hold-tuto">
+							<h6 class="tuto-title">{{title}}</h6>
+							<div class="hold-tuto-videos">
+								<video width="490" height="370" id="mainVideo" controls>
+									<source src="/videos/{{url}}" type="video/mp4">
+								</video>
+								<!-- <img src="img/DSC_0558-Edit.png" class="img-responsive"> -->
 							</div>
-							<div class="col-md-12 row share-control">
-								<p class="p-font-sm">{{{content}}}</p>
+							<div class="text-center">
+								<label class="pull-right">
+									<img src="img/heart-image.png">
+									<span>132 personnent aiment</span>
+								</label>
+								<label>
+									<img class="imgs" src="img/partager.png">
+									<span>Partager</span>
+								</label>
 							</div>
-						</div> 	
-					</div>
-					<div class="col-md-5" style="padding-top:40px;">
-						{{#each getRelated}}
-						<div class="row space-row-tuto div_hover">
-							<div class="col-md-5">
-								<a href="/tutodetails/{{_id}}" title="{{title}}">
-									{{#with getImgTuTO _id}}
-									<img src="{{getImg this}}" class="img-thumbnail" style="margin-bottom:15px; width:150px; height:113px" alt="{{title}}">
-									{{/with}}
-								</a>	 
+							<div>
+								<p>Synonymes de haute qualité, les créations Armani se reconnaissent par un style authentique et unique des plus élégants et un design reconnaissable et discret qui séduit les hommes et les femmes du monde entier.</p>
 							</div>
-							<div class="col-md-7">
-								<h4 class="h4-bold-tuto bold" style="padding-top:15px;"><a href="/tutodetails/{{_id}}">{{title}}</a></h4>
-								<p class="p-font-sm">
-									{{{smaller content 10}}}
-								</p>
+						</div> <!-- hold-tuto -->
+					</div> <!-- col-xs-12 -->
+				{{/with}}
+					<div class="col-xs-12">
+						<div class="hold-tuto-send">
+							<div class="col-xs-6">
+								<div class="row">
+									<div class="col-xs-7">
+										<img src="img/big-face.png" class="img-responsive">
+									</div>
+									<div class="col-xs-5">
+										<div class="control-name-detail">
+											<p class="name-tuto-send">Sarah</p>
+											<p class="date-tuto-send">07-20-2015</p>
+											<p class="time-tuto-send">11:16</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						{{/each}}
-					</div>
-					<!-- <div class="col-md-12">
-						<div class="hold_btn_filter_view">
-							<div class="pull-right">
-								<a href="" id="closeFilter" style="display:none;">Close</a>
-								<button class="btn btn-filter-view" type="button" id="input">
-									<i class="fa fa-search"></i> {{_ "FILTER REVIEWS"}}</button>  
+							<div class="col-xs-6">
+								<div class="pull-right hold-filter-review">
+									<a href="">
+										<img src="img/filter-img.png" class="img-responsive">
+									</a>
+								</div>
 							</div>
-						</div>
-					</div> -->
-						<div class="col-md-12">
-							{{#if currentUser}}
-							{{>addreview}}
-							{{/if}}
-							{{#each getReviewBySort review}}
-							{{>review}}
-							{{else}}
-							<i>هیچ بررسی</i>
-							{{/each}}
-							<div class="pull-right">
-								<h3 id="show1" class="morereview" >{{_ "MORE REVIEWS"}} &nbsp; <i class="fa fa-angle-down morereview" id="btnMore"></i></h3>   
+						</div> <!-- hold-tuto -->
+					</div> <!-- col-xs-12 -->
+					<div class="col-xs-12">
+						<form role="form">
+							<div class="form-group">
+							  <textarea class="form-control" rows="5" id="comment" placeholder="Write what you want here..."></textarea>
 							</div>
-						</div>
-					<!-- <div class="wrapper_forum">
-						<div class="filter_set">
-						</div>
-					</div> -->
-
-				</div>
-			</div>
-			{{/with}}
-		</section>
-		<br>
-		<!-- end contain -->
-	</template>
+						</form>
+						<a href="" class="pull-right">
+							<span class="span-send">SEND</span>
+						</a>
+					</div> <!-- col-xs-12 -->
+					<div class="clearfix"></div>
+					<div class="col-xs-12">
+						<div class="hold-tuto-send">
+							<div class="col-xs-8">
+								<div class="row">
+									<div class="col-xs-7">
+										<img src="img/big-face.png" class="img-responsive">
+									</div>
+									<div class="col-xs-5">
+										<div class="control-name-detail">
+											<p class="name-tuto-send">Sarah</p>
+											<p class="date-tuto-send">07-20-2015</p>
+											<p class="time-tuto-send">11:16</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-4">
+								<div class="pull-right">
+									<label class="black-heart-like">
+										<img src="img/heart-black.png">
+										<span class="number-of-like">19</span>
+									</label>
+								</div>
+							</div>
+						</div> <!-- hold-tuto -->
+					</div> <!-- col-xs-12 -->
+					<div class="col-xs-12">
+						<p class="description-tuto-comment">Take me your advice blah blajdklazld ldjalk dlkazn zjd
+							bazkj bdjbza daz ndakzndkajbdkjab djkzabd bazdbaznbdabd,abdaz
+						</p>
+						<hr class="tuto-hr-comment">
+					</div> <!-- col-xs-12 -->
+					<div class="clearfix"></div>
+					<div class="col-xs-12">
+						<div class="hold-tuto-send">
+							<div class="col-xs-8">
+								<div class="row">
+									<div class="col-xs-7">
+										<img src="img/big-face.png" class="img-responsive">
+									</div>
+									<div class="col-xs-5">
+										<div class="control-name-detail">
+											<p class="name-tuto-send">Sarah</p>
+											<p class="date-tuto-send">07-20-2015</p>
+											<p class="time-tuto-send">11:16</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-4">
+								<div class="pull-right">
+									<label class="black-heart-like">
+										<img src="img/heart-black.png">
+										<span class="number-of-like">19</span>
+									</label>
+								</div>
+							</div>
+						</div> <!-- hold-tuto -->
+					</div> <!-- col-xs-12 -->
+					<div class="col-xs-12">
+						<p class="description-tuto-comment">Take me your advice blah blajdklazld ldjalk dlkazn zjd
+							bazkj bdjbza daz ndakzndkajbdkjab djkzabd bazdbaznbdabd,abdaz
+						</p>
+						<hr class="tuto-hr-comment">
+					</div> <!-- col-xs-12 -->
+					<div class="clearfix"></div>
+					<div class="col-xs-12">
+						<div class="hold-tuto-send">
+							<div class="col-xs-8">
+								<div class="row">
+									<div class="col-xs-7">
+										<img src="img/big-face.png" class="img-responsive">
+									</div>
+									<div class="col-xs-5">
+										<div class="control-name-detail">
+											<p class="name-tuto-send">Sarah</p>
+											<p class="date-tuto-send">07-20-2015</p>
+											<p class="time-tuto-send">11:16</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-xs-4">
+								<div class="pull-right">
+									<label class="black-heart-like">
+										<img src="img/heart-black.png">
+										<span class="number-of-like">19</span>
+									</label>
+								</div>
+							</div>
+						</div> <!-- hold-tuto -->
+					</div> <!-- col-xs-12 -->
+					<div class="col-xs-12">
+						<p class="description-tuto-comment">Take me your advice blah blajdklazld ldjalk dlkazn zjd
+							bazkj bdjbza daz ndakzndkajbdkjab djkzabd bazdbaznbdabd,abdaz
+						</p>
+						<hr class="tuto-hr-comment">
+					</div> <!-- col-xs-12 -->
+				</div> <!-- row -->
+            </div>
+        </section>
+    </article>
+</template>
